fix issue with tooltip position when overflow

--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -37,6 +37,7 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     z-index: 1;
     background-color: map-get($color_day, 'background');
     box-shadow: $toolTipBoxShadow;
+    min-width: 55px;
     padding: 8px;
     align-items: center;
     justify-items: center;
@@ -44,6 +45,8 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     .items {
       display: flex;
       align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
       > div {
         display: flex;
         margin-left: 8px;
